welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: value - is not a member of Boolean
	if(cpt==getMondeHauteur()*getMondeLargeur()-) {
                                                   ^